<resources>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="name_for_account">Account name</string>
    <string name="create">Create</string>
    <string name="server_address">Server address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="pick_folder">Pick folder</string>
    <string name="account_list">Account list</string>
    <string name="no_accounts">No accounts configured yet, please add a new online account</string>
    <string name="select_provider">Select cloud provider</string>
    <string name="server">Server</string>
    <string name="google_drive" translatable="false">Google Drive</string>
    <string name="already_have_account">Already have an account ?</string>
    <string name="create_new_account">Create a new account</string>
    <string name="error_occured">An error occured, check credentials</string>
    <string name="loading">Loading...</string>
    <string name="sync_error">Sync Error</string>
    <string name="sync_ssl_message">SSL Certificate can\'t be validated and this app cannot sync, should we add it manually to continue to sync ?</string>
    <string name="connect_with_nc_app">Connect with the NextCloud App</string>
    <string name="connect_with_nc_app_subtext">Recommended. No need to provide your credentials, must never delete the NextCloud App</string>
    <string name="connect_with_credentials">Connect with your credentials</string>
    <string name="connect_with_credentials_subtext">Doesn\'t work with some servers</string>
    <string name="nextcloud_app_version_needed">A more recent version of the NextCloud app is required to work properly. Proceed to update ?</string>
    <string name="nextcloud_app_needed">The NextCloud app is needed to use this option. Procced to install ?</string>
    <string name="empty_folder">This folder is empty</string>
    <string name="waiting_next_sync">Waiting next sync</string>
    <string name="syncing">Syncing...</string>
    <string name="downloading">Downloading</string>
    <string name="uploading">Uploading</string>
    <string name="warning_notification">Warning Notification</string>
</resources>
