<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    tools:context="com.spisoft.sync.wrappers.nextcloud.NextCloudAuthorizeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="209dp"
        app:srcCompat="@drawable/nextcloud" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_remote_layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_remote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_address" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_username_layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password_layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/connect_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect" />

    </LinearLayout>


</LinearLayout>
